Squashed commit for mon dump feature
