# api/openapi/ceph-api.swagger.json
@@ -637,6 +637,29 @@
         ]
       }
     },
+    "/api/status/mon_dump": {
+      "get": {
+        "summary": "command: ceph mon dump",
+        "operationId": "Status_GetCephMonDump",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/cephCephMonDumpResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/googlerpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "Status"
+        ]
+      }
+    },
     "/api/user": {
       "get": {
         "operationId": "Users_ListUsers",
@@ -893,6 +916,142 @@
         },
         "new_password": {
           "type": "string"
+        }
+      }
+    },
+    "cephCephMonDumpAddrVec": {
+      "type": "object",
+      "properties": {
+        "addrvec": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/cephCephMonDumpAddress"
+          }
+        }
+      }
+    },
+    "cephCephMonDumpAddress": {
+      "type": "object",
+      "properties": {
+        "type": {
+          "type": "string"
+        },
+        "addr": {
+          "type": "string"
+        },
+        "nonce": {
+          "type": "integer",
+          "format": "int32"
+        }
+      }
+    },
+    "cephCephMonDumpFeatures": {
+      "type": "object",
+      "properties": {
+        "persistent": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "optional": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        }
+      }
+    },
+    "cephCephMonDumpMonInfo": {
+      "type": "object",
+      "properties": {
+        "rank": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "name": {
+          "type": "string"
+        },
+        "publicAddrs": {
+          "$ref": "#/definitions/cephCephMonDumpAddrVec"
+        },
+        "addr": {
+          "type": "string"
+        },
+        "publicAddr": {
+          "type": "string"
+        },
+        "priority": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "weight": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "crushLocation": {
+          "type": "string"
+        }
+      }
+    },
+    "cephCephMonDumpResponse": {
+      "type": "object",
+      "properties": {
+        "epoch": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "fsid": {
+          "type": "string"
+        },
+        "modified": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "created": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "minMonRelease": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "minMonReleaseName": {
+          "type": "string"
+        },
+        "electionStrategy": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "disallowedLeaders": {
+          "type": "string"
+        },
+        "stretchMode": {
+          "type": "boolean"
+        },
+        "tiebreakerMon": {
+          "type": "string"
+        },
+        "removedRanks": {
+          "type": "string"
+        },
+        "features": {
+          "$ref": "#/definitions/cephCephMonDumpFeatures"
+        },
+        "mons": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/cephCephMonDumpMonInfo"
+          }
+        },
+        "quorum": {
+          "type": "array",
+          "items": {
+            "type": "integer",
+            "format": "int32"
+          }
         }
       }
     },
